# compute-side-log

./: .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  install-deps.sh
.github/workflows/: github-actions.yml
src/: CMakeLists.txt  client.cpp  client_pool.cc  client_pool.h  csl.cc  csl.h  csl_config.h  ncl_stat.cc  ncl_stat.h  posix_client.c  posix_client.cpp  properties.cc  properties.h  server.cpp  syscall_type.h  util.h
src/rdma/: client.cc  client.h  common.h  mr_pool.cc  mr_pool.h  qp_pool.cc  qp_pool.h  server.cc  server.h
tst/: CMakeLists.txt  client_pool_test.cpp  csl_test.cpp  util_test.cpp
